--- a/site/composer.json
+++ b/site/composer.json
@@ -25,7 +25,8 @@
 	],
 	"require": {
 		"slim/slim":"^3.0",
-		"slim/twig-view": "^2.2"
+		"slim/twig-view": "^2.2",
+		"phpoffice/phpexcel": "^1.8"
 	},
 	"autoload": {
 		"psr-4":{"App\\":"App/"}
