--- a/site/composer.json
+++ b/site/composer.json
@@ -26,7 +26,8 @@
 	"require": {
 		"slim/slim":"^3.0",
 		"slim/twig-view": "^2.2",
-		"phpoffice/phpexcel": "^1.8"
+		"phpoffice/phpexcel": "^1.8",
+		"swiftmailer/swiftmailer": "^5.4"
 	},
 	"autoload": {
 		"psr-4":{"App\\":"App/"}
